force-app/main/default/objects/Contact/fields/Account_County__c.field-meta.xml
<CustomField>
    <fullName>Account_County__c</fullName>
    <formula>TEXT(Account.County__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account County</label>
    <type>Text</type>
</CustomField>