force-app/main/default/objects/Contact/fields/Account_Display__c.field-meta.xml
<CustomField>
    <fullName>Account_Display__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Display</label>
    <type>Text</type>
</CustomField>