force-app/main/default/objects/Contact/fields/Account_Primary_Irrigation_TM__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Irrigation_TM__c</fullName>
    <formula>Account.Primary_Irrigation_TM__c</formula>
    <label>Account Primary Irrigation TM</label>
    <type>Text</type>
</CustomField>