force-app/main/default/objects/Contact/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <description>This field is used so the predefined value in opportunity can copy this value over as it doesn&#39;t work with picklist</description>
    <formula>text(Account.AccountSource)</formula>
    <label>Account Source</label>
    <type>Text</type>
</CustomField>