force-app/main/default/objects/Contact/fields/Activity_Report_Current_Week__c.field-meta.xml
<CustomField>
    <fullName>Activity_Report_Current_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to generate the A/R report for the Current week.</description>
    <inlineHelpText>Check box to generate the A/R report for the Current week.</inlineHelpText>
    <label>Activity Report Current Week</label>
    <type>Checkbox</type>
</CustomField>