force-app/main/default/objects/Contact/fields/Activity_Report_Prior_Week__c.field-meta.xml
<CustomField>
    <fullName>Activity_Report_Prior_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to generate A/R report for the Prior Work Week (FINAL Report).</description>
    <inlineHelpText>Check box to generate A/R report for the Prior Work Week (FINAL Report).</inlineHelpText>
    <label>Activity Report Prior Week</label>
    <type>Checkbox</type>
</CustomField>