force-app/main/default/objects/Contact/fields/Approval_Pickup_Alert__c.field-meta.xml
<CustomField>
    <fullName>Approval_Pickup_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intended for Sarasota County - if flagged then notify specific contact emails with alert for Approval and/or for Pickup notice.</description>
    <inlineHelpText>Intended for Sarasota County Contacts at this time.</inlineHelpText>
    <label>Approval-Pickup Alert</label>
    <type>Checkbox</type>
</CustomField>