force-app/main/default/objects/Contact/fields/B2B_Account_Menu_Control__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Menu_Control__c</fullName>
    <description>B2B Account menu control - using for Industry Type control</description>
    <formula>TEXT(  Account.B2B_Account_Menu_Control__c )</formula>
    <inlineHelpText>B2B Account menu control - using for Industry Type control</inlineHelpText>
    <label>B2B Account Menu Control</label>
    <type>Text</type>
</CustomField>