force-app/main/default/objects/Contact/fields/B2B_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Number__c</fullName>
    <description>Account number from related Account - Account Number field</description>
    <formula>Account.AccountNumber</formula>
    <inlineHelpText>Account number from related Account - Account Number field</inlineHelpText>
    <label>B2B Account Number</label>
    <type>Text</type>
</CustomField>