force-app/main/default/objects/Contact/fields/B2B_Community_User__c.field-meta.xml
<CustomField>
    <fullName>B2B_Community_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>B2B User ID populated when User is created and related to Contact for B2B Community</description>
    <label>B2B Community User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>B2BContacts</relationshipName>
    <type>Lookup</type>
</CustomField>