force-app/main/default/objects/Contact/fields/B2B_Customer__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wesco B2B Website contact.  Going to use box to send contact info to Prelude to create web user.</description>
    <inlineHelpText>Wesco B2B Website contact.  Going to use box to send contact info to Prelude to create web user.</inlineHelpText>
    <label>B2B Customer</label>
    <type>Checkbox</type>
</CustomField>