force-app/main/default/objects/Contact/fields/B2B_ShipVia_Override__c.field-meta.xml
<CustomField>
    <fullName>B2B_ShipVia_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ship-Via default override for related B2B user during checkout on website.</description>
    <inlineHelpText>Ship-Via default override for related B2B user during checkout on website.</inlineHelpText>
    <label>B2B ShipVia Override</label>
    <referenceTo>ccrz__E_ShippingRate__c</referenceTo>
    <relationshipLabel>B2BContacts</relationshipLabel>
    <relationshipName>B2BContacts</relationshipName>
    <type>Lookup</type>
</CustomField>