force-app/main/default/objects/Contact/fields/B2B_Web_User_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Web_User_ID__c</fullName>
    <description>Prelude Web User ID</description>
    <inlineHelpText>Prelude Web User ID</inlineHelpText>
    <label>B2B Web User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>