force-app/main/default/objects/Contact/fields/Community_Location__c.field-meta.xml
<CustomField>
    <fullName>Community_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Single location assigned for Customer Community</description>
    <inlineHelpText>Single Location assigned for Customer Community</inlineHelpText>
    <label>Community Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SVMXC__Site__c.SVMXC__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>