force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Standard role for a Contact</description>
    <inlineHelpText>Enter the standarized role for this contact.  This field will be used for reporting purposes to group together similar contacts.</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Assistant Superintendent</fullName>
            </value>
            <value>
                <fullName>Athletic Director</fullName>
            </value>
            <value>
                <fullName>Owner / CEO</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Equipment Repair Contact</fullName>
            </value>
            <value>
                <fullName>Fleet Manager</fullName>
            </value>
            <value>
                <fullName>Groundskeeper</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Grounds Manager</fullName>
            </value>
            <value>
                <fullName>Irrigation Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchasing Agent</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Parts Personnel</fullName>
            </value>
            <value>
                <fullName>Shop Manager</fullName>
            </value>
            <value>
                <fullName>Sales Person</fullName>
            </value>
            <value>
                <fullName>Site Supervisor</fullName>
            </value>
            <value>
                <fullName>Superintendent</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Vendor - District Sales Manager</fullName>
            </value>
            <value>
                <fullName>IT - Information Systems</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>