force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>The current contact status of this person at this account.</description>
    <inlineHelpText>The current contact status of this person at this account.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>No Longer with Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>