force-app/main/default/objects/Contact/fields/CurrentWeekMonday__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeekMonday__c</fullName>
    <description>Current Week Monday&#39;s date</description>
    <formula>CASE(
  MOD( TODAY() - DATE( 1900, 1, 8 ), 7 ),
  0, TODAY(),
  1, TODAY()-2,
  2, TODAY()-3,
  3, TODAY()-4,
  4, TODAY()-5,
  5, TODAY()-6, 
  TODAY()-7
)</formula>
    <inlineHelpText>Current Week Monday&#39;s Date</inlineHelpText>
    <label>CurrentWeekMonday</label>
    <type>Date</type>
</CustomField>