force-app/main/default/objects/Contact/fields/CurrentWeekSaturday__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeekSaturday__c</fullName>
    <description>Current Week&#39;s Saturday date</description>
    <formula>CASE(
  MOD( TODAY() - DATE( 1900, 1, 8 ), 7 ),
  0, TODAY()+5,
  1, TODAY()+4,
  2, TODAY()+3,
  3, TODAY()+2,
  4, TODAY()+1,
  5, TODAY(), 
  TODAY()-1
)</formula>
    <inlineHelpText>Current Week&#39;s Saturday Date</inlineHelpText>
    <label>CurrentWeekSaturday</label>
    <type>Date</type>
</CustomField>