force-app/main/default/objects/Contact/fields/CY_Count_Sales_Calls__c.field-meta.xml
<CustomField>
    <fullName>CY_Count_Sales_Calls__c</fullName>
    <label>CY Count Sales Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>