force-app/main/default/objects/Contact/fields/ERP_Response__c.field-meta.xml
<CustomField>
    <fullName>ERP_Response__c</fullName>
    <description>ERP Response from Prelude when B2B User created/updated.</description>
    <label>ERP Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>