force-app/main/default/objects/Contact/fields/Full_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_SF_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full SF ID</label>
    <type>Text</type>
</CustomField>