force-app/main/default/objects/Contact/fields/Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal contact only.  Do not display on community lists.</description>
    <inlineHelpText>Check this box for any contact that should not be displayed on a customer community contact list.</inlineHelpText>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>