force-app/main/default/objects/Contact/fields/Irrigation_Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Target_Account__c</fullName>
    <description>Irrigation Target Account flagged on Account to choose contact</description>
    <formula>IF( (HasOptedOutOfEmail &lt;&gt; TRUE) &amp;&amp;  (TEXT(Contact_Status__c) = &#39;Active&#39;)  &amp;&amp; Account.Irrigation_Target_Account__c &amp;&amp;  NOT(ISBLANK(Email)) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Irrigation Target Account</label>
    <type>Checkbox</type>
</CustomField>