force-app/main/default/objects/Contact/fields/Last_WTU_Class__c.field-meta.xml
<CustomField>
    <fullName>Last_WTU_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field. Process builder populate. Used to auto link with survey response</description>
    <label>Last WTU Class</label>
    <referenceTo>WTU_Classes__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>