force-app/main/default/objects/Contact/fields/Last_WTU_Class_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_WTU_Class_Attended__c</fullName>
    <description>Process Builder to generate every time an attended WTU class record is created</description>
    <label>Last WTU Class Attended</label>
    <length>150</length>
    <type>Text</type>
</CustomField>