force-app/main/default/objects/Contact/fields/Mail_Chimp_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mail_Chimp_Notes__c</fullName>
    <label>Mail Chimp Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>