force-app/main/default/objects/Contact/fields/Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email__c</fullName>
    <label>Mass Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>