force-app/main/default/objects/Contact/fields/MC_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>MC_Email_Opt_Out__c</fullName>
    <formula>IF( HasOptedOutOfEmail  = TRUE,&quot;SF Unsubscribe&quot;,&quot;SF Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Email Opt Out</label>
    <type>Text</type>
</CustomField>