force-app/main/default/objects/Contact/fields/myTurf_Contact__c.field-meta.xml
<CustomField>
    <fullName>myTurf_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>myTurf Contact</label>
    <type>Checkbox</type>
</CustomField>