force-app/main/default/objects/Contact/fields/myTurfPro_Contact__c.field-meta.xml
<CustomField>
    <fullName>myTurfPro_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>myTurfPro Contact</label>
    <type>Checkbox</type>
</CustomField>