force-app/main/default/objects/Contact/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <inlineHelpText>Please enter the extension if the customer has one</inlineHelpText>
    <label>Phone Extension</label>
    <length>15</length>
    <type>Text</type>
</CustomField>