force-app/main/default/objects/Contact/fields/Phone_Number_Check__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Check__c</fullName>
    <formula>IF(AND(ISBLANK( Phone ),ISBLANK( MobilePhone ),ISBLANK( OtherPhone ),ISBLANK( HomePhone )), FALSE, TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number Check</label>
    <type>Checkbox</type>
</CustomField>