force-app/main/default/objects/Contact/fields/PS_Customer__c.field-meta.xml
<CustomField>
    <fullName>PS_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PrestaShop Website existing active customer</description>
    <inlineHelpText>PrestaShop Website existing active customer</inlineHelpText>
    <label>PS Customer</label>
    <type>Checkbox</type>
</CustomField>