force-app/main/default/objects/Contact/fields/pymt__Google_Buyer_Id__c.field-meta.xml
<CustomField>
    <fullName>pymt__Google_Buyer_Id__c</fullName>
    <inlineHelpText>Id assigned to the contact by Google.</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>