force-app/main/default/objects/Contact/fields/pymt__Hosted_Profiles__c.field-meta.xml
<CustomField>
    <fullName>pymt__Hosted_Profiles__c</fullName>
    <description>JSON string containing IDs for all remotely hosted customer profiles linked to this contact (includes profiles stored at multiple payment processors)</description>
    <inlineHelpText>JSON string containing IDs for all remotely hosted customer profiles linked to this contact (includes profiles stored at multiple payment processors)</inlineHelpText>
    <label>Hosted Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>