force-app/main/default/objects/Contact/fields/pymt__Member_Pricing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pymt__Member_Pricing_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow PaymentConnect add-ons to present member-only pricing to this customer.</description>
    <inlineHelpText>Check this box to allow PaymentConnect add-ons to present member-only pricing to this customer.</inlineHelpText>
    <label>Member Pricing Enabled</label>
    <type>Checkbox</type>
</CustomField>