force-app/main/default/objects/Contact/fields/pymt__PayPal_Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>pymt__PayPal_Payer_Id__c</fullName>
    <inlineHelpText>Id assigned by PayPal to this contact.</inlineHelpText>
    <label>PayPal Payer Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>