force-app/main/default/objects/Contact/fields/Send_Website_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Website_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to send website welcome email. Contact website admin for questions</inlineHelpText>
    <label>Send Website Welcome Email</label>
    <type>Checkbox</type>
</CustomField>