force-app/main/default/objects/Contact/fields/Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Notes__c</fullName>
    <description>Special Notes or Comments on Contact record to appear on Equipment listings.</description>
    <inlineHelpText>Special Notes or Comments on Contact record to appear on Equipment listings.</inlineHelpText>
    <label>Special Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>