force-app/main/default/objects/Contact/fields/TempActivityReportCurrentWeek__c.field-meta.xml
<CustomField>
    <fullName>TempActivityReportCurrentWeek__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for automation</description>
    <label>TempActivityReportCurrentWeek</label>
    <type>Checkbox</type>
</CustomField>