force-app/main/default/objects/Contact/fields/TempActivityReportPriorWeek__c.field-meta.xml
<CustomField>
    <fullName>TempActivityReportPriorWeek__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for automation</description>
    <label>TempActivityReportPriorWeek</label>
    <type>Checkbox</type>
</CustomField>