force-app/main/default/objects/Contact/fields/Test_Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Update_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mass update to trigger last update date</description>
    <label>Test Update Field</label>
    <type>Checkbox</type>
</CustomField>