force-app/main/default/objects/Contact/fields/TIMBASURVEYS__SurveyReminder__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
    <defaultValue>&#39;&#39;</defaultValue>
    <label>SurveyReminder</label>
    <type>TextArea</type>
</CustomField>