force-app/main/default/objects/Contact/fields/TLC_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLC_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to show if Contact is the TLC Contact</description>
    <label>TLC Contact</label>
    <type>Checkbox</type>
</CustomField>