force-app/main/default/objects/Contact/fields/TLC_of_Points__c.field-meta.xml
<CustomField>
    <fullName>TLC_of_Points__c</fullName>
    <label>TLC # of Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>