force-app/main/default/objects/Contact/fields/Toro_Eloqua_ID__c.field-meta.xml
<CustomField>
    <fullName>Toro_Eloqua_ID__c</fullName>
    <label>Toro Eloqua ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>