force-app/main/default/objects/Contact/fields/WTU_Mailing_List_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>WTU_Mailing_List_Opt_in__c</fullName>
    <label>WTU Mailing List Opt in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>