force-app/main/default/objects/Contact/validationRules/Contacts_in_Wesco_Vendor_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacts_in_Wesco_Vendor_Account</fullName>
    <active>true</active>
    <description>stop users from creating contacts in Vendor Acccount</description>
    <errorConditionFormula>Account.Name  = &quot;WESCO TURF - INTERNAL&quot; &amp;&amp;  TEXT(Account.Type) = &quot;Vendor&quot;</errorConditionFormula>
    <errorMessage>You cannot create a contact for Wesco Turf Internal Vendor Account. Please contact your administrator for assistance.</errorMessage>
</ValidationRule>