force-app/main/default/objects/Contact/listViews/Active_Contacts.listView-meta.xml
<ListView>
    <fullName>Active_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Internal_Only__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Active Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <portalRole>ManateeCountyCustomerExecutive</portalRole>
        <portalRole>ManateeCountyCustomerManager</portalRole>
        <portalRole>ManateeCountyCustomerUser</portalRole>
        <portalRole>SarasotaCountyCustomerExecutive</portalRole>
        <portalRole>SarasotaCountyCustomerManager</portalRole>
        <portalRole>SarasotaCountyCustomerUser</portalRole>
    </sharedTo>
</ListView>