force-app/main/default/objects/Contact/listViews/Active_Contacts_No_Account.listView-meta.xml
<ListView>
    <fullName>Active_Contacts_No_Account</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Internal_Only__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Active Contacts No Account</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Information_Technology</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>