force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>MC4SF__MC_Subscriber__c</columns>
    <columns>MC_Email_Opt_Out__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>