force-app/main/default/objects/Contact/listViews/B2B_Community_Contacts.listView-meta.xml
<ListView>
    <fullName>B2B_Community_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Status__c</columns>
    <columns>B2B_Account_Number__c</columns>
    <columns>B2B_Community_User__c</columns>
    <columns>B2B_Customer__c</columns>
    <columns>B2B_Web_User_ID__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>B2B_Community_User__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>B2B Community Contacts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Admin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>